--- a/360FloatWindowDemo/.gitignore
+++ b/360FloatWindowDemo/.gitignore
@@ -1,8 +1,56 @@
+# kdiff3 ignore
+*.orig
+
+# maven ignore
+target/
+
+# eclipse ignore
+.settings/
+.project
+.classpath
+
+*.ipr
 *.iml
+*.iws
+
+# temp ignore
+*.log
+*.cache
+*.diff
+*.patch
+*.tmp
+
+# system ignore
+.DS_Store
+Thumbs.db
+
+# package ignore (optional)
+# *.jar
+# *.war
+# *.zip
+# *.tar
+# *.tar.gz
+
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
+.idea/
+.idea/workspace.xml
+.idea/copyright
+.idea/libraries
+.idea/scopes
+.idea/androidDexCompiler.xml
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/gradle.xml
+.idea/misc.xml
+.idea/dictionaries
+.idea/uiDesigner.xml
 .DS_Store
 /build
-/captures
+
+package-id.txt
+
+ext-args.txt
+app/src/main/gen/
+local.properties
+
